# apify-AI-Training-Data-Scraper

./: .gitignore  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_local.py  sample_input.json
.actor/: Dockerfile  actor.json  input_schema.json  output_schema.json
src/: __init__.py  __main__.py  chunking.py  content_extractor.py  main.py  metadata_extractor.py  output_formatter.py  utils.py
tests/: test_chunking.py  test_content_extractor.py
